fixed addaptive layout issues

--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -1,8 +1,7 @@
-// @import url('../../fonts/Mont-Regular/style.css');
-
 .pagination {
   display: flex;
   justify-content: center;
+  padding-left: 0px;
 
   &__item {
     list-style: none;
